Fix isKdePlatformTheme for Flatpaks

When running Flatpaks on Plasma the platformtheme is 'xdgdesktopportal'

Internally it still proxies the real KDE platformtheme and we want to read the colors from it instead of just switching between Breeze Light and Dark

BUG: 494734